# sphinxext-opengraph

./: .gitignore  .readthedocs.yml  .ruff.toml  LICENSE.md  README.md  README.rst  __init__.py  dev-requirements.txt  noxfile.py  output.txt  pyproject.toml  readme.md  requirements.txt  setup.py  temp
.github/workflows/: builddoc.yml  create-release.yml  lint.yml  lock.yml  test.yml  workflow.yml
docs/: conf.py  index.rst  requirements.txt  socialcards.rst
docs/script/: generate_social_card_previews.py
docs/source/: conf.py  index.md  socialcards.md
sphinxext/: opengraph.py
sphinxext/opengraph/: __init__.py  _description_parser.py  _meta_parser.py  _social_cards.py  descriptionparser.py  directive.py  event_handler.py  html_parser.py  metaparser.py  socialcards.py  titleparser.py  util.py  visitor.py
src/sphinxext_opengraph/: __init__.py  descriptionparser.py
tests/: conftest.py  test_options.py
tests/roots/test-arbitrary-tags/: index.rst
tests/roots/test-custom-tags/: conf.py
tests/roots/test-description-length/: conf.py
tests/roots/test-double-spacing/: conf.py  index.rst
tests/roots/test-first-image/: conf.py  index.rst
tests/roots/test-first-image-no-image/: conf.py  index.rst
tests/roots/test-image/: conf.py
tests/roots/test-image-rel-paths/: conf.py  index.rst
tests/roots/test-image-rel-paths/sub/: index.rst
tests/roots/test-list/: index.rst
tests/roots/test-local-image/: conf.py
tests/roots/test-meta-name-description/: conf.py
tests/roots/test-meta-name-description-escape/: conf.py  index.rst
tests/roots/test-meta-name-description-manual-description/: conf.py  index.rst
tests/roots/test-meta-name-description-manual-og-description/: conf.py  index.rst
tests/roots/test-override-url/: conf.py  index.rst
tests/roots/test-overrides-complex/: conf.py  index.rst
tests/roots/test-overrides-disable/: conf.py  index.rst
tests/roots/test-overrides-simple/: conf.py  index.rst
tests/roots/test-quotation-marks/: conf.py  index.rst
tests/roots/test-rtd-default/: conf.py
tests/roots/test-rtd-invalid/: conf.py  index.rst
tests/roots/test-sitename/: conf.py
tests/roots/test-sitename-from-project/: conf.py
tests/roots/test-skip-admonitions/: index.rst
tests/roots/test-skip-code-block/: conf.py  index.rst
tests/roots/test-skip-comments/: conf.py  index.rst
tests/roots/test-skip-raw/: conf.py  index.rst
tests/roots/test-skip-title/: conf.py  index.rst
tests/roots/test-social-cards-svg/: conf.py
tests/roots/test-type/: conf.py
wpilib/: ogp.py
